# llmex

./: .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.llmex/: trust-policy.json
.omx/handoffs/: final-quality-gate-1.4.0.json
0.ref/: README.md  SHA256SUMS
configs/data/: sample.yaml
docs/: README.md  acceptance-matrix.md  api-cli.md  baseline-report.md  baseline-runbook.md  changelog.md  chat-sft.md  data-card.md  data-report.md  decisions.md  environment.md  evaluation-report.md  examples.md  failure-modes.md  history.md  inference-report.md  manual-quality-review-guide.md  migration.md  model-card.md  model-report.md  operations-runbook.md  plan.md  prd.md  release-checklist.md  reproducibility.md  run-guide.md  security.md  teacher-distillation.md  threat-model.md  todo.md  tokenizer-card.md  tokenizer-report.md  training-report.md
scripts/: build_multiturn_aligned_sft.py  build_multiturn_sft_mix.py  build_multiturn_teacher_source.py  build_readiness_paraphrase_suite.py  convert_llmex_hf_to_gguf.py  cuda_smoke.py  llmex-baseline.service
tests/: test_book.py  test_config.py  test_distill.py  test_distill_quality.py  test_foundation.py  test_g003_chat.py  test_korean_prompts.py  test_m1_data.py  test_m2_tokenizer.py  test_m3_model.py  test_m4_training.py  test_m5_evaluation.py  test_m6_pipeline.py  test_m7_release.py  test_model_export.py  test_multilingual.py  test_sft_curriculum.py  test_sft_mixer.py  test_sft_quality.py
(+264 files in other folders)
