[project]
name = "llmex"
version = "1.22.2"
description = "한국어 Wikipedia 기반 소형 언어 모델 실험 도구"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45,<47",
  "numpy>=2.0,<3",
  "pydantic>=2.11,<3",
  "PyYAML>=6.0.2,<7",
  "tokenizers>=0.21,<1",
  "torch>=2.5,<3",
  "typer>=0.16,<1",
]

[project.scripts]
llmex = "llmex.cli:app"

[dependency-groups]
dev = [
  "hypothesis>=6.135,<7",
  "pyright>=1.1.403,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmex"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/configs",
  "/docs",
  "/scripts",
  "/README.md",
  "/NOTICE.md",
  "/ATTRIBUTION.md",
  "/LICENSE",
  "/Makefile",
  "/pyproject.toml",
  "/uv.lock",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["0.ref"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["0.ref"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
